# yacas

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists-conf.txt  CMakeLists-docs.txt  CMakeLists-jyacas.txt  CMakeLists-packages.txt  CMakeLists-tests.txt  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  ChangeLog  INSTALL  INSTALL.rst  Makefile  Makefile.am  Makefile.in  NEWS  README  README.EPOC  README.Win32  README.beos  README.rst  TODO  _config.yml  acinclude.m4  aclocal.m4  appveyor.yml  build.xml  cmake_config.h.in  conf-macosx-debug.sh  conf-macosx.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  (+19 more)
cyacas/: CMakeLists.txt
cyacas/libyacas/: CMakeLists.txt
cyacas/libyacas_mp/: CMakeLists.txt
cyacas/packaging/: CMakeLists.txt
cyacas/xeus-yacas/: CMakeLists.txt
cyacas/yacas/: CMakeLists.txt
cyacas/yacas-gui/: CMakeLists.txt  img.qrc  yacas-gui.desktop  yacas.icns
cyacas/yacas-kernel/: CMakeLists.txt
docs/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  about.html  articles.html  autocompleter.cpp  autocompleter.css  autocompleteraccess.js  basicindex.html  bugs.txt  changes.html  conf.py  consoledescr.html  consoleedit.html  consoleview.html  cookie.js  credits.html  credits.rst  datahub.js  derivative.txt  derivative.yart  derivativeedit.html  derivativeview.html  downloads.html  downloads.html.in  examples-static.txt  faq.html  glossary.rst  gpl.html  hintstojscript.cpp  homepage.html  index.rst  informatie.html  journal.js  journaldescr.html  journaledit.html  journalview.html  jslog.js  (+31 more)
docs/dev/: genindex.html  (+4 more)
man/: CMakeLists.txt  yacas.1.rst
manmake/: Algo.book.txt  BuildSystem.chapt.txt  CodeTransformation.chapt.txt  Makefile.am  Makefile.in  NewDesign.book.txt  NewDesignMisc.chapt.txt  Plugins-Howto.chapt.txt  README  SimpleTools.chapt.txt  SturmSequences.chapt.txt  YacasDocs.chapt.txt  addons.chapt.txt  algo-basic.chapt.txt  algo-contfrac.chapt.txt  algo-numapprox.chapt.txt  algorithms-elemfunc.chapt.txt  algorithms-multivar.chapt.txt  algorithms-numtheory.chapt.txt  algorithms-specfunc.chapt.txt  api2txt.pl  arith.chapt.txt  book2TeX.sh  book2TeX.ys  book2txt.sh  book2txt.ys  book2xml.sh  book2xml.ys  book2ys.sh  book2ys.ys  calc.chapt.txt  cl-options.chapt.txt  codecheck.chapt.txt  coding.book.txt  complex.chapt.txt  config.chapt.txt  const.chapt.txt  controlflow.chapt.txt  essays.book.txt  filescanner.chapt.txt  (+34 more)
manualmaker/: Makefile  Makefile.am  Makefile.in  coding.html  codingchapter1.html  codingchapter2.html  codingchapter3.html  codingchapter4.html  codingchapter5.html  codingchapters.html  codingmanual.html  intro.html  introchapter1.html  introchapters.html  manualmaker  ref.html  refchapter10.html  refchapter11.html  refchapter12.html  refchapter13.html  refchapter14.html  refchapter3.html  refchapter4.html  refchapter5.html  refchapter6.html  refchapter7.html  refchapter8.html  refchapter9.html  refchapters.html  refprogchapter1.html  refprogchapter2.html  refprogchapter3.html  refprogchapter4.html
packaging/: CMakeLists.txt  yacas.spec
plugins/: Makefile.am  Makefile.in  README  doc.txt  extract_stub.pl
proteus/: FltkConsole.cpp  FltkConsole.h  FltkHintWindow.cpp  FltkHintWindow.h  HelpView.cpp  Makefile  Makefile.am  Makefile.in  WorksheetBanner  debugclass.cpp  debugclass.h  depend.dep  editor.cpp  editor.h  fl_adjustable_file_chooser.H  fl_adjustable_file_chooser.cpp  flplot  flplot.ys  fltkgraph.stub  fltkgraphstub.cc  grapher.cpp  hints  makefile.agenda  makefile.alpha  makefile.linux  makefile.macosx  makefile.mark  makefile.tracer  makeinclude  manripper.cpp  proteus.dsp  proteusdebugger.dsp  proteusmenu.h  tabs.cpp  tabs.h  todo.txt  tracer.cpp  tracer.ys  yacdefines.h
ramscripts/: Makefile  Makefile.am  Makefile.in  README.compressor  compress.bat  compressedfiles.cpp  compressor.cpp  decompressor.cpp  depend.dep  minilzo.c  ramscripts.cc  test.sh
scripts/: Makefile  Makefile.am  Makefile.in  assoc.ys  c_form  complex  complex.ys  controlflow.ys.def  cstubgen  deffunc  factors.ys  fakedb.ys  formula  gnudata.in  gnudata.in1  gnudata.in2  gnuplot.in  integrate  kuk  limit  lists  lists.ys  localrules  localrules.ys.def  logic  logic.def  logic.ys  maketest  newly  newly.def  newly.ys  odesolver  odesolver.ys  orthopoly.ys.def  packages.ys  padic  padic.ys  patterns.def  predicates  predicates.def  (+34 more)
src/: Makefile  Makefile.am  Makefile.in  Makefile.win32  anumber.cpp  anumber.h  anumber.inl  archiver.cpp  archiver.h  arggetter.cpp  arggetter.h  arrayclass.cpp  arrayclass.h  arrayclass.inl  associationclass.cpp  biginteger.cpp  check_plugins.cpp  choices.h  codecomment.h  codereviewer.cpp  commandline.cpp  commandline.h  compressedfiles.cpp  compressedfiles.h  compressor.cpp  compressor.dsp  corefunctions.h  ctokenizer.cpp  ctokenizer.h  cyacas.cpp  cyacas.h  debugmem.cpp  debugmem.h  decompressor.cpp  deffile.cpp  deffile.h  deffile.inl  depend.dep  elfdll.cpp  elfdll.h  (+140 more)
tests/: CMakeLists.txt  GaussianIntegers.yts  Makefile.am  Makefile.in  arithmetic.yts  association.yts  bitops.yts  c_tex_form.yts  calculus.yts  comments.yts  complex.yts  deriv.yts  dimensions.yts  dot.yts  graphs.yts  includetestfiles  integrate.yts  io.yts  linalg.yts  lists.yts  logic_simplify_test.yts  macro.yts  newly.yts  nthroot.yts  numbers.yts  numerics.yts  nummethods.yts  ode.yts  openmath.yts  outer.yts  padic.yts  physics.yts  plots.yts  plugin.yts  poly.yts  precision.yts  predicates.yts  products.yts  programming.yts  radsimp.yts  (+11 more)
trunk/: AUTHORS  CMakeLists-conf.txt  CMakeLists-jyacas.txt  CMakeLists-packages.txt  CMakeLists-tests.txt  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README  README.Win32  TODO  acconfig.h  acinclude.m4  aclocal.m4  cmake_config.h.in  conf-macosx-debug.sh  conf-macosx.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  doxy_yacas  libtool.m4  ltconfig  makemake  makewin.bat  mkhomepage  mkinstalldirs  mkmanual  packages.ys.in  readme.bin.win32.txt  test  test.cpp  testje  testje.ys  todo.txt  (+8 more)
(+3045 files in other folders)
